fixed locate toggle
toggle shouldn't get cut off by footer now

--- a/docs/style/main.scss
+++ b/docs/style/main.scss
@@ -158,14 +158,14 @@ body {
     }
     .map-class {
         grid-area: map;
-        height: 100vh;
+        height: 95%;
         width: 100%;
         position: absolute;
         overflow: hidden;
         z-index: 1;
         #map {
             width: 100%;
-            height: 100vh;
+            height: 100%;
             overflow: hidden;
             .mapboxgl-user-location-dot:before {
                 background-color:rgb(223, 79, 207);
@@ -178,17 +178,17 @@ body {
             }
             .mapboxgl-ctrl-group {
                 border-radius: 0px !important;
-                background-color: $light_pink;
+                background-color: $blue;
             }
             .mapboxgl-ctrl-group:not(:empty) {
                 box-shadow: $black 0px 0px 5px 0px;
             }
             button.mapboxgl-ctrl-geolocate {
-                width: 50px !important;
-                height: 50px !important;
+                width: 42px !important;
+                height: 42px !important;
                 display: block;
                 cursor: pointer;
-                border: 5px solid $pink;
+                border: 4px solid $darkblue;
                 .mapboxgl-ctrl-icon {
                     display: block;
                     width: 100%;
@@ -356,7 +356,7 @@ body {
     overflow: hidden;
     color: $yellow;
     width: 100%;
-    height: auto;
+    height: 5%;
     padding: $text_padding;
     transition: transform .7s ease-in-out;
     z-index: 2;
